Pequenas correcoes